--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
 <span id="sidebar-toggle-span">
-<a href="#" id="sidebar-toggle" data-sidebar-toggle=""><i class="fa fa-bars"></i> navigation</a>
+<a href="#" id="sidebar-toggle" data-sidebar-toggle=""><i class="fas fa-bars"></i> navigation</a>
 </span>
-{{if .Site.Home.Content }} 
+{{if .Site.Home.Content }}
 {{.Site.Home.Content}}
-{{else}}           
+{{else}}
 	{{if eq .Site.Language.Lang "fr"}}
 		<h1>Personaliser la page d'accueil</h1>
 		<p>
@@ -24,7 +24,7 @@
 		  <li><b>2. </b> Configure your server to automatically redirect this home page to one of your documentation pages</li>
 		</ul>
 	{{end}}
-	<p><i class="fa fa-heart fa-4x"></i></p>
+	<p><i class="fas fa-heart fa-4x"></i></p>
 {{ end }}
 
 {{ end }}
