--- a/layouts/partials/flex/body-aftercontent.html
+++ b/layouts/partials/flex/body-aftercontent.html
@@ -9,7 +9,7 @@
 
 <div class="footline">
     {{if .Params.tags }}
-    <div class="tags"> 
+    <div class="tags">
       {{ range $index, $tag := .Params.tags }}
         <a class="label label-default" href="{{$.Site.BaseURL}}tags/{{ $tag | urlize }}">{{ $tag }}</a>
       {{ end }}
@@ -18,27 +18,29 @@
 
     {{with .Params.LastModifierDisplayName}}
     <div class="author">
-        <i class='fa fa-user'></i> <a href="mailto:{{ $.Params.LastModifierEmail }}">{{ . }}</a>
+        <i class='fas fa-user'></i> <a href="mailto:{{ $.Params.LastModifierEmail }}">{{ . }}</a>
     </div>
     {{end}}
 
   {{ if not .Page.Lastmod.IsZero }}
     <div class="date">
-        <i class='fa fa-calendar'></i> {{T "last-update-on"}} {{ .Page.Lastmod.Format "02/01/2006" }}
+        <i class='far fa-calendar'></i> {{T "last-update-on"}} {{ .Page.Lastmod.Format "02/01/2006" }}
     </div>
     {{end}}
 
+		{{ if .Site.Params.showImprove }}
     <div class="github-link">
-      <a href="{{ .Site.Params.editURL }}{{ replace .File.Dir "\\" "/" }}{{ .File.LogicalName }}" target="blank"><i class="fa fa-code-fork"></i>
+      <a href="{{ .Site.Params.editURL }}{{ replace .File.Dir "\\" "/" }}{{ .File.LogicalName }}" target="blank"><i class="fas fa-code-branch"></i>
         {{T "Edit-this-page"}}</a>
     </div>
+		{{end}}
   </div>
 
 
 	<div>
 {{ $footer := print "_footer." .Lang }}
 {{ range where .Site.Pages "Source.BaseFileName" $footer }}
-  {{ .Content }} 
+  {{ .Content }}
 {{else}}
   {{ if .Site.GetPage "page" "_footer.md" }}
     {{(.Site.GetPage "page" "_footer.md").Content}}
