--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -27,16 +27,16 @@
         ">
       <div>
       <a href="{{ .RelPermalink}}">{{safeHTML .Params.Pre}}{{.Title}}{{safeHTML .Params.Post}}</a>
-        
+
         {{- if ne $numberOfPages 0 }}
           {{- if or (.IsAncestor $currentNode) (.Params.alwaysopen) }}
-            <i class="fa fa-angle-down fa-lg category-icon"></i>
+            <i class="fas fa-angle-down fa-lg category-icon"></i>
           {{- else -}}
-            <i class="fa fa-angle-right fa-lg category-icon"></i>
+            <i class="fas fa-angle-right fa-lg category-icon"></i>
           {{- end}}
         {{- end}}
 
-        {{- if $showvisitedlinks}}<i class="fa fa-circle-thin read-icon"></i>{{end}}
+        {{- if $showvisitedlinks}}<i class="far fa-circle-thin read-icon"></i>{{end}}
       </div>
       {{- if ne $numberOfPages 0 }}
         <ul>
@@ -73,7 +73,7 @@
           <a href="{{ .RelPermalink}}">
             {{safeHTML .Params.Pre}}{{.LinkTitle}}{{safeHTML .Params.Post}}
           </a>
-          {{- if $showvisitedlinks}}<i class="fa fa-circle-thin read-icon"></i>{{end}}
+          {{- if $showvisitedlinks}}<i class="far fa-circle-thin read-icon"></i>{{end}}
         </div>
     </li>
      {{- end}}
