--- a/layouts/partials/original/body-beforecontent.html
+++ b/layouts/partials/original/body-beforecontent.html
@@ -10,9 +10,9 @@
     </div>
     {{- if not .Site.Params.disableSearch}}
         <div class="searchbox">
-		    <label for="search-by"><i class="fa fa-search"></i></label>
+		    <label for="search-by"><i class="fas fa-search"></i></label>
 		    <input data-search-input id="search-by" type="text" placeholder="{{T "Search-placeholder"}}">
-		    <span data-search-clear=""><i class="fa fa-close"></i></span>
+		    <span data-search-clear=""><i class="fas fa-times"></i></span>
 		</div>
 		<script type="text/javascript" src="{{"js/lunr.min.js" | relURL}}"></script>
 		<script type="text/javascript" src="{{"js/auto-complete.js" | relURL}}"></script>
@@ -30,12 +30,12 @@
       <ul class="topics">
         {{- if not .Site.Params.disableHomeIcon}}
             <li data-nav-id="{{"/" | relLangURL}}" class="dd-item">
-            <a href="{{"/" | relLangURL}}"><i class="fa fa-fw fa-home"></i></a>
+            <a href="{{"/" | relLangURL}}"><i class="fas fa-fw fa-home"></i></a>
             </li>
         {{- end}}
-		
+
 		{{- partial "menu.html" . }}
-		
+
 		{{- with .Site.Menus.shortcuts}}
         <section id="shortcuts">
             {{- range sort . "Weight"}}
@@ -48,14 +48,14 @@
         </section>
 
         {{- if $.Site.Params.showVisitedLinks}}
-            <a id="clear-history" class="" href="#" data-clear-history-toggle=""><i class="fa  fa-history"></i> {{T "Clear-History"}}</a>
+            <a id="clear-history" class="" href="#" data-clear-history-toggle=""><i class="fas fa-history"></i> {{T "Clear-History"}}</a>
         {{- end}}
 
 		{{- end}}
 
     <hr />
     <li>{{- partial "language-selector.html" . }}</li>
-    
+
     </ul>
 
  <section id="footer">
@@ -77,7 +77,7 @@
       {{with $File.Path }}
     <div id="top-github-link">
       <a class="github-link" href="{{ $Site.Params.editURL }}{{ replace $File.Dir "\\" "/" }}{{ $File.LogicalName }}" target="blank">
-        <i class="fa fa-code-fork"></i>
+        <i class="fas fa-code-branch"></i>
         {{T "Edit-this-page"}}
       </a>
     </div>
@@ -87,15 +87,15 @@
     <div id="breadcrumbs" itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb">
         <span id="sidebar-toggle-span">
           <a href="#" id="sidebar-toggle" data-sidebar-toggle="">
-            <i class="fa fa-bars"></i>
+            <i class="fas fa-bars"></i>
           </a>
         </span>
-        <span id="toc-menu"><i class="fa fa-list-alt"></i></span>
+        <span id="toc-menu"><i class="fas fa-list-alt"></i></span>
         <span class="links">
-        {{ template "breadcrumb" dict "page" . "value" .Title }}   
+        {{ template "breadcrumb" dict "page" . "value" .Title }}
         </span>
     </div>
-    
+
     <!-- TOC -->
     <div class="progress">
         <div class="wrapper">
@@ -121,7 +121,7 @@
 {{define "breadcrumb"}}
 {{ if .page.Parent}}
 {{$value := (printf "<a href='%s'>%s</a> > %s" .page.Parent.URL .page.Parent.Title .value)}}
-{{ template "breadcrumb" dict "page" .page.Parent "value" $value }} 
+{{ template "breadcrumb" dict "page" .page.Parent "value" $value }}
 {{else}}
  {{.value|safeHTML}}
 {{end}}
