--- a/static/theme-flex/style.css
+++ b/static/theme-flex/style.css
@@ -610,9 +610,10 @@ div.notices p:first-child:before {
   position: absolute;
   top: -27px;
   color: #fff;
-  font-family: FontAwesome;
-  content: '!';
-  left: 10px; }
+  font-family: "Font Awesome 5 Free";
+	font-weight: 900;
+  content: '\f06a';
+  left: 8px; }
 
 div.notices p:first-child:after {
   position: absolute;
