--- a/static/theme-flex/style.css
+++ b/static/theme-flex/style.css
@@ -57,9 +57,10 @@ header {
   top: 0;
   z-index: 100; }
   header:after {
-    background: url(ribbon.png) 0 0/100% no-repeat;
+    /* background: url(ribbon.png) 0 0/100% no-repeat; */
+		background-color: #888;
     content: '';
-    height: .35rem;
+    height: .2rem;
     left: 0;
     position: absolute;
     right: 0;
@@ -314,7 +315,7 @@ article section.page {
   -ms-flex: 1;
   flex: 1;
   box-sizing: border-box;
-  margin: 0 1rem 0 20rem;
+  margin: 0 0rem 0 20rem;
   overflow-y: auto;
   padding: 2rem 4rem; }
   article section.page h1:first-of-type {
